--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FecabasketCampain</title>
+  <title>Yves TSALA | Draw A New Vision</title>
+  <meta name="description" content="Soutenons Yves TSALA pour relever le basketball camerounais.">
+  <meta property="og:image" content="/assets/img/home/yvestsala.jpg">
+  <meta property="og:description" content="Soutenons Yves TSALA pour relever le basketball camerounais.">
+  <meta property="og:title" content="Yves TSALA | Draw A New Vision">
+  <meta property="og:url" content="https://yvestsala2022.com/">
+  <meta property="og:site_name" content="Yves TSALA">
+  <meta property="og:type" content="website">
+  <meta name="twitter:image" content="/assets/img/home/yvestsala.jpg">
+  <meta name="twitter:description" content="Soutenons Yves TSALA pour relever le basketball camerounais.">
+  <meta name="twitter:title" content="Yves TSALA | Draw A New Vision">
+  <meta name="twitter:url" content="https://yvestsala2022.com/">
+  <meta name="twitter:card" content="summary">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
