--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Yves TSALA | Draw A New Vision</title>
-  <meta name="description" content="Soutenons Yves TSALA pour relever le basketball camerounais.">
+  <title>Yves Tsala 2022 | Draw a new vision</title>
+  <meta name="description" content="Soutenons Yves Tsala pour relever le basketball camerounais.">
   <meta property="og:image" content="/assets/img/home/yvestsala.jpg">
-  <meta property="og:description" content="Soutenons Yves TSALA pour relever le basketball camerounais.">
-  <meta property="og:title" content="Yves TSALA | Draw A New Vision">
+  <meta property="og:description" content="Soutenons Yves Tsala pour relever le basketball camerounais.">
+  <meta property="og:title" content="Yves Tsala 2022 | Draw a new vision">
   <meta property="og:url" content="https://yvestsala2022.com/">
   <meta property="og:site_name" content="Yves TSALA">
   <meta property="og:type" content="website">
   <meta name="twitter:image" content="/assets/img/home/yvestsala.jpg">
-  <meta name="twitter:description" content="Soutenons Yves TSALA pour relever le basketball camerounais.">
-  <meta name="twitter:title" content="Yves TSALA | Draw A New Vision">
+  <meta name="twitter:description" content="Soutenons Yves Tsala pour relever le basketball camerounais.">
+  <meta name="twitter:title" content="Yves Tsala 2022 | Draw a new vision">
   <meta name="twitter:url" content="https://yvestsala2022.com/">
   <meta name="twitter:card" content="summary">
   <base href="/">
